# nwpio

./: .gitignore  BUGFIX_TIME_COORDINATE.md  CHANGELOG_S3_SUPPORT.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile  ENVIRONMENT_VARIABLES.md  FEATURES.md  FILE_VALIDATION.md  GETTING_STARTED.md  LICENSE  PARALLEL_GRIB_LOADING.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  UPLOAD_IMPROVEMENTS.md  VALIDATION_SUMMARY.md  WORKFLOW_SUMMARY.md  config-multi.yaml  config.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml  publish.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  TIMESTAMP_FEATURE.md  WRITE_LOCAL_FIRST.md  index.md
docs/about/: license.md
docs/advanced/: formatting.md  performance.md  write-local-first.md
docs/api/: cli.md  config.md  downloader.md  overview.md  processor.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: data-sources.md  downloading.md  ecmwf-variables.md  processing.md  workflow.md
examples/: README_ECMWF.md  config-ecmwf-wind10m-gcs.yaml  config-ecmwf-wind10m.yaml  config-multi.yaml  config-production.yaml  config.yaml  cron_job.sh  example_config.yaml  example_usage.py  kubernetes_cronjob.yaml
nwp_download/: __init__.py  cli.py  config.py  downloader.py  processor.py  sources.py  utils.py
nwpio/: __init__.py  cli.py  config.py  downloader.py  processor.py  sources.py  utils.py
tests/: __init__.py  test_config.py  test_processor.py
