[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwpio"
version = "0.1.0"
description = "Download and process NWP forecast data from cloud archives"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
maintainers = [
    { name = "Oceanum Developers", email = "developers@oceanum.science" },
]
keywords = ["weather", "forecast", "gfs", "ecmwf", "grib", "zarr", "nwp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-cloud-storage",
    "xarray",
    "cfgrib",
    "zarr<3",
    "dask",
    "click",
    "pydantic",
    "pydantic-settings",
    "python-dateutil",
    "tqdm",
    "fsspec",
    "gcsfs",
    "s3fs",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.scripts]
nwpio = "nwpio.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nwpio*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
